Major refactor, now all identifiers follow same TryParse patterns and a separate Parser object for each with simple POCO returned. This works better for Dependency Injection and use in other projects

--- a/Identifiers.Test/Identifiers.Test.csproj
+++ b/Identifiers.Test/Identifiers.Test.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Test_DVANumber.cs" />
     <Compile Include="Test_MedicareProviderNumber.cs" />
     <Compile Include="Test_MedicareNumber.cs" />
     <Compile Include="Test_NationalHealthcareIdentifier.cs" />
