--- a/Identifiers/Identifiers.csproj
+++ b/Identifiers/Identifiers.csproj
@@ -40,13 +40,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Australian\NationalHealthcareIdentifier.cs" />
-    <Compile Include="Australian\MedicareNumber.cs" />
-    <Compile Include="Australian\MedicareProviderNumber.cs" />
+    <Compile Include="Australian\DepartmentVeteransAffairs\DVANumber.cs" />
+    <Compile Include="Australian\DepartmentVeteransAffairs\DVANumberParser.cs" />
+    <Compile Include="Australian\DepartmentVeteransAffairs\IDVANumber.cs" />
+    <Compile Include="Australian\DepartmentVeteransAffairs\IDVANumberParser.cs" />
+    <Compile Include="Australian\MedicareNumber\IMedicareMedicareNumberGenerator.cs" />
+    <Compile Include="Australian\MedicareNumber\IMedicareNumber.cs" />
+    <Compile Include="Australian\MedicareNumber\IMedicareNumberParser.cs" />
+    <Compile Include="Australian\MedicareNumber\MedicareNumberGenerator.cs" />
+    <Compile Include="Australian\MedicareNumber\MedicareNumberParser.cs" />
+    <Compile Include="Australian\MedicareNumber\MedicareNumber.cs" />
+    <Compile Include="Australian\MedicareProviderNumber\IMedicareProviderNumber.cs" />
+    <Compile Include="Australian\MedicareProviderNumber\IMedicareProviderNumberGenerator.cs" />
+    <Compile Include="Australian\MedicareProviderNumber\IMedicareProviderNumberParser.cs" />
+    <Compile Include="Australian\MedicareProviderNumber\MedicareProviderNumberGenerator.cs" />
+    <Compile Include="Australian\MedicareProviderNumber\MedicareProviderNumber.cs" />
+    <Compile Include="Australian\MedicareProviderNumber\MedicareProviderNumberParser.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\HealthcareProviderIdentifierIndividualGenerator.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\HealthcareProviderIdentifierOrganisationParser.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\HealthcareProviderIdentifierOrganisation.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IHealthcareProviderIdentifierIndividual.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IHealthcareProviderIdentifierIndividualGenerator.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IHealthcareProviderIdentifierIndividualParser.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IHealthcareProviderIdentifierOrganisation.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IHealthcareProviderIdentifierOrganisationGenerator.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IHealthcareProviderIdentifierOrganisationParser.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IIndividualHealthcareIdentifier.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IIndividualHealthcareIdentifierGenerator.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IIndividualHealthcareIdentifierParser.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\INationalHealthcareIdentifierBase.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\HealthcareProviderIdentifierIndividual.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IndividualHealthcareIdentifier.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\HealthcareProviderIdentifierIndividualParser.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\HealthcareProviderIdentifierOrganisationGenerator.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IndividualHealthcareIdentifierGenerator.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\IndividualHealthcareIdentifierParser.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\NationalHealthcareIdentifierBase.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\NationalHealthcareIdentifierGenerator.cs" />
+    <Compile Include="Australian\NationalHealthcareIdentifier\NationalHealthcareIdentifierParser.cs" />
     <Compile Include="CheckDigitAlgorithm\Luhn.cs" />
+    <Compile Include="CheckDigitAlgorithm\MedicareNumberCheckDigit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Support\StandardsInformation\Australian\MedicareProviderNumberInfo.cs" />
+    <Compile Include="Support\StandardsInformation\Australian\MedicareNumberInfo.cs" />
+    <Compile Include="Support\StandardsInformation\Australian\NationalHealthcareIdentifierInfo.cs" />
     <Compile Include="Support\StringSupport.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
